--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=Login/index.html" />
+  <meta http-equiv="refresh" content="0; url=access_panel/access_panel.html" />
   <title>Redirecting...</title>
 </head>
 <body>
