--- a/add_new_doctor/new_user.html
+++ b/add_new_doctor/new_user.html
@@ -49,6 +49,12 @@
           >
             doctor List
           </button>
+          <button
+            class="nav-btn"
+            onclick="location.href='../available_indoor_patients/available_indoor_patient.html'"
+          >
+            Available patients
+          </button>
         </nav>
       </div>
 
